2005-01-06  Boby Wang <boby.wang@sun.com>

	* gui/e-day-view.c: (e_day_view_on_text_item_event):
	Change the keys which need to be pressed to alter the end time
	of the event selected. Now: Ctrl+Shift+Up(or Down)
	Before: Ctrl+Alt+Shift+Up(or Down) conflict with switching
	the workspace in Gnome Desktop.

2006-01-05  Johnny Jacob  <johnnyjacob@gmail.com>

	* gui/dialogs/event-page.c (init_widgets): Set alarm-dialog as
	modal.

2006-01-05  Johnny Jacob  <johnnyjacob@gmail.com>

	Fixes #216535
	* gui/dialogs/event-page.c (end_date_changed_cb ): Added. Signal
	handler for end_time.
	(start_date_changed_cb) : Added. Changes the end_time according to 
	the duration.

2006-01-05  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/alarm-notify/alarm-notify-dialog.c: 
	Include the e-time-utils.h from libedataserver
	as it has been removed from e-util. Fixes a build
	break.
	(snooze_pressed_cb):Fixed a warning.

2006-01-05  Johnny Jacob  <johnnyjacob@gmail.com>

	Fixes #258786 
	* gui/e-cal-popup.c (e_cal_popup_target_new_select) : When more than
	one event is selected, check for ICAL_COMPLETED_PROPERTY and set the bit
	accordingly.
	* gui/e-calendar-table.c (tasks_popup_items) : Enable "b0.markmanycomplete" menu item
	only if E_CAL_POPUP_SELECT_NOTCOMPLETE is set.

2006-01-05  Johnny Jacob  <johnnyjacob@gmail.com>

	Fixes #303193
	* gui/alarm-notify/alarm-notify-dialog.c (notified_alarms_dialog_new):
	Changed events handled for edit_btn, snooze_btn from pressed to
	clicked
	(snooze_pressed_callback) : Grab keyboard focus to snooze_btn.
	
2006-01-05  P S Chakravarthi <pchakravarthi@novell.com>

	Fixes 317808

	* gui/alarm-notify/alarm-notify.glade : added hours as a 
	spin button for snooze
	* gui/alarm-notify/alarm-notify-dialog.c : added code to 
	include hours in calculation of snooze time.

2006-01-04  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/e-day-view.c: (e_day_view_convert_event_coords),
	(tooltip_get_view_event), (tooltip_destroy),